--- a/src/scss/_pipelines.scss
+++ b/src/scss/_pipelines.scss
@@ -86,10 +86,17 @@
 .expand-templates {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-right: 1rem;
+  justify-content: flex-start;
+}
+
+.pipeline .download {
+  margin-top: 1rem;
+}
+
+.pipeline .actions {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 
   border-bottom: 1px solid var(--color-bg-light);
   .filler {
@@ -145,6 +152,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+
     padding: 0.6rem 0.8rem;
 
     font-weight: normal;
