--- a/src/scss/_tooltips.scss
+++ b/src/scss/_tooltips.scss
@@ -54,6 +54,8 @@
 [data-tooltip]:focus::after {
   color: var(--color-text);
 
+  font-weight: lighter;
+
   text-align: center;
 
   background-color: var(--color-bg-dark);
