--- a/src/scss/_pipelines.scss
+++ b/src/scss/_pipelines.scss
@@ -84,9 +84,17 @@
 .expand-templates {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  justify-content: flex-start;
+}
+
+.pipeline .action:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+.pipeline .actions {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 
   border-bottom: 1px solid var(--color-bg-light);
 
@@ -112,14 +120,9 @@
   }
 
   small {
-    margin-left: 1rem;
     padding: 0.2rem 0.4rem;
 
     background-color: var(--color-bg-light);
-  }
-
-  .tip {
-    margin-right: 0.6rem;
   }
 }
 
@@ -139,13 +142,19 @@
   .header {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
+
     padding: 0.6rem 0.8rem;
 
     font-weight: normal;
     font-size: 18px;
 
     border-bottom: 1px solid var(--color-secondary);
+
+    .link {
+      margin-left: 1rem;
+    }
   }
 
   .logs-table {
