--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -194,6 +194,7 @@ nav {
   ol {
     background-color: var(--color-bg-dark);
     padding: 0;
+    margin: 0;
     display: inline-block;
     list-style-type: none;
     width: auto;
@@ -202,7 +203,7 @@ nav {
   li {
     position: relative;
     display: inline-block;
-    padding: 0.2rem 1rem;
+    padding: 1rem 1rem;
   }
 
   li:first-child {
