feat(crumbs): cleanup missed

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -188,7 +188,7 @@ nav {
 }
 
 .navigation {
-  padding: 0px var(--horizontal-pad) 0px 0px;
+  padding: 0 var(--horizontal-pad) 0 0;
 
   ol {
     background-color: var(--color-bg-dark);
