--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -767,7 +767,8 @@ nav {
   }
 }
 
-.step {
+.step,
+.service {
   display: flex;
 }
 
@@ -804,13 +805,15 @@ nav {
   background-size: 100% 2em;
 }
 
-.step .-status {
+.step .-status,
+.service .-status {
   margin-top: 2rem;
   margin-right: 1rem;
   margin-left: 2.6rem;
 }
 
-.step .-icon-container {
+.step .-icon-container,
+.service .-icon-container {
   padding-top: 12px;
   padding-bottom: 12px;
 
@@ -823,7 +826,8 @@ nav {
   margin-left: 36px;
 }
 
-.step .-icon.-pending {
+.step .-icon.-pending,
+.service .-icon.-pending {
   padding: 8px;
 
   border: 2px solid var(--color-bg-light);
@@ -832,18 +836,22 @@ nav {
   fill: var(--color-bg-light);
 }
 
-.step .-view.-running {
-  border-color: var(--color-yellow);
-}
-
-.step .-info {
+.step .-info,
+.service .-info {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.step .-info .-duration {
+.step .-info .-duration,
+.service .-info .-duration {
   font-family: var(--font-code);
+}
+
+.no-services {
+  padding: 1rem 1rem;
+
+  background-color: var(--color-bg-dark);
 }
 
 .logs-container {
