--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -366,6 +366,16 @@ nav {
   overflow: hidden;
 }
 
+
+.build-preview-error {
+  display: inline-block;
+  margin-top: 0.4rem;
+  padding:  0.6rem 0.8rem;
+  background-color: var(--color-bg-dark);
+  color: var(--color-red-light);
+  font-size: 16px;
+}
+
 .build {
   position: relative;
 
