adding margin to filter bar

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -281,6 +281,10 @@ nav {
   padding-bottom: 0.3rem;
 }
 
+.overview .form-control:first-child {
+  margin-top: 1rem;
+}
+
 .filtered-repos {
   margin-top: 2em;
 }
