chore: remove unused things, fix some

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -804,9 +804,9 @@ nav {
 .flowline-left {
   background: linear-gradient(
     90deg,
-    hsla(0, 0, 0, 0) calc(2.25em - 1px),
+    hsla(0, 0%, 0%, 0) calc(2.25em - 1px),
     var(--color-flowline) calc(2.25em),
-    hsla(0, 0, 0, 0) calc(2.25em + 1px)
+    hsla(0, 0%, 0%, 0) calc(2.25em + 1px)
   );
 }
 
