--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -19,6 +19,16 @@
   display: flex;
   width: 100%;
   padding-bottom: 1rem;
+
+  a {
+    /* stylelint-disable-next-line plugin/no-low-performance-animation-properties */
+    transition: border-color 0.4s;
+
+    &:hover,
+    &:focus {
+      border-color: var(--color-primary);
+    }
+  }
 }
 
 .jump-bar .jump-button {
