--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -315,17 +315,40 @@ nav {
 
 // deployments
 .deployment-container {
+
+  display: flex;
   width: 100%;
   margin: 12px 0;
   overflow: hidden;
+
+  border-top: 2px solid var(--color-green);
+  border-bottom: 2px solid var(--color-green);
 }
 
-.deployment {
+.deployment-icon {
   position: relative;
 
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-top: -2px;
+  margin-bottom: -2px;
+  padding: 1em;
+
+  background: var(--color-green);
+}
+
+.deployment-icon svg {
+  fill: none;
+  stroke: var(--color-bg);
+}
+
+.deployment {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
+  padding: 1em;
 
   font-weight: 300;
   font-size: 18px;
@@ -335,9 +358,20 @@ nav {
   border-left: 0;
 }
 
-.deployment div {
+.deployment .deployment-link {
   display: flex;
   flex-direction: column;
+  justify-content: end;
+  padding-right: 1em;
+}
+
+.deployment div.deployment-info {
+  display: flex;
+  flex-direction: row;
+}
+
+.deployment div.deployment-info div {
+  min-width: 10em;
 }
 
 .deployment div p {
