--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -42,26 +42,26 @@ header {
   padding: 1em var(--horizontal-pad);
 
   background: radial-gradient(
-    circle at 50% -200%,
-    var(--color-bg-light) -7%,
-    transparent 50%
+      circle at 50% -200%,
+      var(--color-bg-light) -7%,
+      transparent 50%
   );
 
   border-top-width: 0;
   border-bottom: var(--line-width) solid;
   border-left-width: 0;
   border-image-source: linear-gradient(
-    to right,
-    var(--color-secondary) 55%,
-    transparent 55%,
-    transparent 58%,
-    var(--color-secondary) 58%,
-    var(--color-secondary) 69%,
-    transparent 69%,
-    transparent 75%,
-    var(--color-primary) 75%,
-    var(--color-primary) 76%,
-    transparent 76%
+      to right,
+      var(--color-secondary) 55%,
+      transparent 55%,
+      transparent 58%,
+      var(--color-secondary) 58%,
+      var(--color-secondary) 69%,
+      transparent 69%,
+      transparent 75%,
+      var(--color-primary) 75%,
+      var(--color-primary) 76%,
+      transparent 76%
   );
   border-image-slice: 1;
 }
@@ -122,8 +122,8 @@ header {
   box-shadow: 0 0 2px var(--color-black);
 
   .identity-menu-item a {
-    padding: 0.5rem 1rem;
     display: block;
+    padding: 0.5rem 1rem;
   }
 
   .identity-menu-item:not(:first-child) a {
@@ -192,12 +192,15 @@ nav {
   padding: 0 var(--horizontal-pad) 0 0;
 
   ol {
-    background-color: var(--color-bg-dark);
-    padding: 0;
-    margin: 0;
+
     display: inline-block;
-    list-style-type: none;
     width: auto;
+    margin: 0;
+    padding: 0;
+
+    list-style-type: none;
+
+    background-color: var(--color-bg-dark);
   }
 
   li {
@@ -217,18 +220,22 @@ nav {
     &:last-child {
       color: var(--color-bg-dark);
       font-weight: bold;
+
       background-color: var(--color-lavender);
     }
 
     &:last-child::before,
     &:last-child::after {
-      content: '';
       position: absolute;
       top: 0;
       bottom: 0;
+
       width: 1rem;
+
       background: var(--color-lavender);
       transform: skew(-15deg);
+
+      content: '';
     }
 
     &:last-child::before {
@@ -316,12 +323,13 @@ nav {
 // builds styles for /:org/:repo/:build_number
 
 details.build-toggle {
-  z-index: 9999;
   position: absolute;
   top: 1em;
   right: 1em;
-  flex: 0;
+  z-index: 9999;
+
   -webkit-flex: 0;
+  flex: 0;
 }
 
 .build-toggle .summary {
@@ -430,9 +438,11 @@ details.build-toggle {
   display: inline-block;
   margin-top: 0.4rem;
   padding: 0.6rem 0.8rem;
-  background-color: var(--color-bg-dark);
+
   color: var(--color-red-light);
   font-size: 16px;
+
+  background-color: var(--color-bg-dark);
 }
 
 .build {
@@ -532,11 +542,12 @@ details.build-toggle {
 }
 
 .build .error {
+  max-width: 80%;
+
   color: var(--color-red-light);
 
   font-size: 16px;
 
-  max-width: 80%;
 }
 
 .build .error .message {
@@ -572,10 +583,13 @@ details.build-toggle {
 
 .commit-msg {
   flex-basis: 80%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
   margin-left: 6px;
+
+  overflow: hidden;
+
+  white-space: nowrap;
+
+  text-overflow: ellipsis;
 }
 
 .time-info {
@@ -625,12 +639,12 @@ details.build-toggle {
 
 .build-animation.-bottom.-running {
   animation: build-status-parallax-running 26s linear 26s infinite,
-    build-status-parallax-start 26s linear none;
+  build-status-parallax-start 26s linear none;
 }
 
 .build-animation.-top.-running {
   animation: build-status-parallax-running 22s linear 22s infinite,
-    build-status-parallax-start 22s linear none;
+  build-status-parallax-start 22s linear none;
 }
 
 .build-animation.-bottom.-start {
@@ -656,7 +670,7 @@ details.build-toggle {
 }
 
 .build-animation.-running.-frame-0 {
-  left: 0%;
+  left: 0;
 }
 
 .build-animation.-running.-frame-1 {
@@ -701,9 +715,11 @@ details.build-toggle {
 }
 
 .build-history-title {
-  font-size: 0.8em;
-  padding: 0.4rem 0 0.4rem 0.4rem;
   display: inline;
+  padding: 0.4rem 0 0.4rem 0.4rem;
+
+  font-size: 0.8em;
+
 }
 
 .recent-build {
@@ -800,10 +816,9 @@ details.build-toggle {
   margin-left: 0.5em;
 
   border-color: transparent;
-  border-bottom-color: var(--color-bg-light);
   border-style: solid;
-
   border-width: 5px;
+  border-bottom-color: var(--color-bg-light);
 
   content: ' ';
 }
@@ -850,26 +865,28 @@ details.build-toggle {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-
-  padding-right: 1rem;
-  padding-left: 1.6rem;
-  padding-top: 0.6rem;
-
   margin-top: 0.6rem;
 
+  padding-top: 0.6rem;
+  padding-right: 1rem;
+  padding-left: 1.6rem;
+
+
   div {
-    background: var(--color-bg-light);
     padding: 0.2rem 1.2rem;
+
+    background: var(--color-bg-light);
+
     border: 1px solid var(--color-bg-light);
   }
 }
 
 .flowline-left {
   background: linear-gradient(
-    90deg,
-    hsla(0, 0%, 0%, 0) calc(2.25em - 1px),
-    var(--color-flowline) calc(2.25em),
-    hsla(0, 0%, 0%, 0) calc(2.25em + 1px)
+      90deg,
+      hsla(0, 0%, 0%, 0) calc(2.25em - 1px),
+      var(--color-flowline) calc(2.25em),
+      hsla(0, 0%, 0%, 0) calc(2.25em + 1px)
   );
 }
 
@@ -928,12 +945,15 @@ details.build-toggle {
 }
 
 .logs-container {
+  position: relative;
+
   margin-right: -1rem;
   margin-left: -1rem;
-  background-color: var(--color-bg-dark);
-  position: relative;
+
   font-weight: 300;
   font-size: 14px;
+
+  background-color: var(--color-bg-dark);
 
   .message {
     padding: 0.5rem 1rem;
@@ -989,17 +1009,20 @@ details.build-toggle {
 
 .logs-table {
   display: block;
-  table-layout: fixed;
   width: 100%;
-  padding-bottom: 2rem;
+
   padding-top: 1rem;
+  padding-bottom: 2rem;
+
+  table-layout: fixed;
 }
 
 .logs-table.scrollable {
-  resize: vertical;
-  overflow-y: auto;
   min-height: 10rem;
   max-height: 75rem;
+  overflow-y: auto;
+
+  resize: vertical;
   scrollbar-color: var(--color-coal-light) var(--color-bg-dark);
   scrollbar-width: thin;
 }
@@ -1015,19 +1038,21 @@ details.build-toggle {
 
 .logs-table .line-number {
   position: relative;
+
+  width: 6ch;
+
+  overflow: hidden;
+
   font-family: var(--font-code);
+
+  white-space: nowrap;
+  text-align: right;
+  text-decoration: none;
+  text-overflow: ellipsis;
 
   background: none;
 
   user-select: none;
-
-  text-align: right;
-  text-overflow: ellipsis;
-  text-decoration: none;
-  white-space: nowrap;
-  overflow: hidden;
-
-  width: 6ch;
 
   &:hover,
   &:focus {
@@ -1039,8 +1064,8 @@ details.build-toggle {
   background: var(--color-bg-dark);
 
   border: 2px solid var(--color-bg-dark);
-  border-bottom: 3px solid var(--color-bg-light);
   border-right: 3px solid var(--color-bg-light);
+  border-bottom: 3px solid var(--color-bg-light);
 }
 
 .logs-table::-webkit-scrollbar {
@@ -1049,23 +1074,25 @@ details.build-toggle {
 
 .logs-table::-webkit-scrollbar-thumb {
   background-color: var(--color-bg-light);
-  border-radius: 1rem;
   border: 2px solid var(--color-bg-dark);
+  border-radius: 1rem;
 }
 
 .logs-header {
-  padding: 0.25rem 0;
-  border-bottom: 1px solid var(--color-slate);
-  background: var(--color-bg-dark);
-  width: 100%;
   z-index: 1;
 
   display: flex;
+
   justify-content: flex-end;
+  width: 100%;
+  padding: 0.25rem 0;
+
+  background: var(--color-bg-dark);
+  border-bottom: 1px solid var(--color-slate);
 
   .button {
-    padding: 0.3rem;
     margin: 0.2rem 0.6rem;
+    padding: 0.3rem;
   }
 }
 
@@ -1074,16 +1101,20 @@ details.build-toggle {
 }
 
 .logs-sidebar {
-  height: 100%;
   position: absolute;
+
   right: 1rem;
+
+  height: 100%;
+
   padding-bottom: 2rem;
 }
 
 .logs-sidebar .inner-container {
-  margin: 0.5rem 0 0.5rem 0;
   position: sticky;
   top: 1rem;
+
+  margin: 0.5rem 0 0.5rem 0;
 
   svg {
     padding: 0.2rem;
@@ -1095,9 +1126,12 @@ details.build-toggle {
   flex-direction: column;
 
   button {
-    background: var(--color-coal-light);
     margin-bottom: 0.4rem;
+
     color: var(--color-offwhite);
+
+    background: var(--color-coal-light);
+
   }
 }
 
@@ -1117,6 +1151,7 @@ details.build-toggle {
 .fadeOutRightBig {
   animation-name: fadeOutRightBig;
 }
+
 /* stylelint-enable */
 
 .alerts {
@@ -1160,7 +1195,6 @@ details.build-toggle {
   font-size: 14px;
 
   background-color: var(--color-bg-dark);
-  border-radius: 5px;
   border-radius: 0;
   box-shadow: 0 5px 5px -5px hsla(0, 0%, 0%, 0.5);
 
@@ -1303,15 +1337,18 @@ details.build-toggle {
 
   // triangle tip
   &::after {
-    display: block;
     position: absolute;
-    content: '';
     top: -0.5rem;
     right: 0;
+
+    display: block;
+
     border-color: transparent;
     border-style: solid;
     border-width: 0 0.5rem 0.5rem 0.5rem;
     border-bottom-color: var(--color-bg-light);
+
+    content: '';
   }
 }
 
@@ -1321,12 +1358,15 @@ details.build-toggle {
 }
 
 .cmd-text {
-  border: none;
-  padding: 0.5rem;
-  margin: 0.2rem 0;
-  color: var(--color-text);
-  background-color: var(--color-bg);
   flex: 1;
+  margin: 0.2rem 0;
+  padding: 0.5rem;
+
+  color: var(--color-text);
+
+  background-color: var(--color-bg);
+
+  border: none;
 
   + .button {
     margin-left: 0.5rem;
@@ -1341,6 +1381,7 @@ details.build-toggle {
 .help.details[open] .summary + *:first-of-type {
   margin-top: 0.25rem;
 }
+
 /* stylelint-enable selector-max-specificity */
 
 .help-footer {
@@ -1417,8 +1458,8 @@ details.build-toggle {
 
 // Secrets Section begin
 .secrets-first-cell {
-  padding: 0.5rem 1rem;
-  padding-bottom: 0;
+  padding: 0.5rem 1rem 0;
+
   color: var(--color-primary);
   font-size: 1.2rem;
 }
@@ -1426,14 +1467,16 @@ details.build-toggle {
 .manage-secret .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   padding: 0.5rem 0;
+
   border-bottom: 2px solid var(--color-secondary);
 }
 
 .manage-secret h2 {
   margin: 0;
+
   border-bottom: 2px solid var(--color-secondary);
 }
 
@@ -1462,19 +1505,22 @@ details.build-toggle {
 }
 
 .added-image {
-  margin: 0.2rem 1rem;
-  display: flex;
-  padding: 0.3rem 1rem;
-  align-items: center;
-  background: var(--color-bg-dark);
   position: relative;
+
+  display: flex;
+  align-items: center;
+  margin: 0.2rem 1rem;
+  padding: 0.3rem 1rem;
+
+  background: var(--color-bg-dark);
 }
 
 .added-image .name {
   flex: 1;
-  word-wrap: break-word;
-  font-family: var(--font-code);
+
   font-size: 0.9rem;
+  font-family: var(--font-code);
+  word-wrap: break-word;
 }
 
 .images .added-image .button {
@@ -1486,12 +1532,14 @@ details.build-toggle {
 }
 
 .added-image.chevron:before {
-  content: '';
-  border-style: solid;
-  border-width: 0.1rem 1rem 0.1rem 0.2rem;
-  border-color: var(--color-primary);
   position: absolute;
   left: -1.5rem;
+
+  border-color: var(--color-primary);
+  border-style: solid;
+  border-width: 0.1rem 1rem 0.1rem 0.2rem;
+
+  content: '';
 }
 
 .no-rows {
@@ -1499,22 +1547,25 @@ details.build-toggle {
 }
 
 .manage-secret .subheader {
-  margin-top: 1rem;
-  border-bottom: 2px solid var(--color-primary);
   width: 80%;
+  margin-top: 1rem;
+
+  border-bottom: 2px solid var(--color-primary);
 }
 
 .manage-secret textarea,
 .update-secret textarea {
   width: 70%;
-  border: none;
-  box-shadow: none;
-  background: var(--color-bg-dark);
-  color: var(--color-text);
-  font-size: 1rem;
-  font-weight: 300;
   margin-bottom: 0.5rem;
   padding: 0.5rem;
+
+  color: var(--color-text);
+  font-weight: 300;
+  font-size: 1rem;
+
+  background: var(--color-bg-dark);
+  border: none;
+  box-shadow: none;
 }
 
 .manage-secret input {
@@ -1534,15 +1585,17 @@ details.build-toggle {
 }
 
 .button.-secret-delete-confirm {
-  background-color: var(--color-bg);
   color: var(--color-red);
+
+  background-color: var(--color-bg);
   border-color: var(--color-red);
 
   &:hover,
   &:focus,
   &:active {
-    background-color: var(--color-red-dark);
     color: var(--color-offwhite);
+
+    background-color: var(--color-red-dark);
     border-color: var(--color-offwhite);
   }
 }
@@ -1550,9 +1603,10 @@ details.build-toggle {
 // Secrets Section end
 
 .field-description {
-  font-size: 1rem;
-  font-weight: 300;
   margin-left: 1rem;
+
+  font-weight: 300;
+  font-size: 1rem;
 }
 
 .field-header {
@@ -1567,8 +1621,8 @@ details.build-toggle {
 }
 
 .break-text {
-  word-break: break-word;
   word-wrap: break-word;
+  word-break: break-word;
 }
 
 .break-word {
