--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -4,8 +4,7 @@
 
 .table-base {
   width: 100%;
-  margin: 0;
-  margin-bottom: 1rem;
+  margin: 0 0 1rem;
   padding: 0;
 
   background-color: var(--color-bg-dark);
