--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -249,7 +249,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0.5rem 0 0 0;
+  margin: 0.5rem 0;
   padding: 1rem;
 
   background-color: var(--color-bg-dark);
