--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -318,7 +318,7 @@ nav {
   display: flex;
   width: 100%;
   margin: 12px 0;
-  overflow: visible;
+  overflow: hidden;
 
   border-top: 2px solid var(--color-green);
   border-bottom: 2px solid var(--color-green);
