remove inline html

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -575,6 +575,10 @@ details.build-toggle {
   text-overflow: ellipsis;
 }
 
+.time-toggle {
+  justify-content: space-around;
+}
+
 .time-info {
   display: flex;
   flex-direction: column;
